--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 Where Did HiAnime Go?
                 Just like a TV show takes a break, we needed one too. But we missed you guys, and now we’re back and better than ever, all thanks to you!</p></p>
         </section>
+        <footer>
+            <p>&copy; 2025 HiAnime. All rights reserved.</p>
+          </footer>
+        </body>
+        </html>
+        
     
 </body>
 </html>
